# redundant-but-not-deducible

./: README.md  redundant-but-not-deducible.cabal
src/: Client.hs  EventThing.hs
