cabal-version: 3.0
name:          redundant-but-not-deducible
version:       0.1.0.0
license:       MPL-2.0
license-file:  LICENSE
author:        Phil de Joux
maintainer:    philderbeast@gmail.com
category:      Language
build-type:    Simple

library
  exposed-modules:  EventThing
  build-depends:    base
  hs-source-dirs:   src
  default-language: Haskell2010
